--- a/django_project/core/base_templates/includes/base-auth-nav-left.html
+++ b/django_project/core/base_templates/includes/base-auth-nav-left.html
@@ -27,6 +27,22 @@
             <a href="{% url 'project-create' %}">Create Project</a>
         </li>
     </ul>
+    <ul class="nav navbar-nav">
+        <li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Training & Certification <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+                <li>
+                    <a href="{% url 'register-training-centre' %}">
+                        Register Training Centre</a>
+                </li>
+
+                <li><a href="#">
+                    Print Certificate</a> </li>
+            </ul>
+        </li>
+    </ul>
 {% else %}
     <ul class="nav navbar-nav">
         {% if the_project.image_file %}
