add training center register (#392)

--- a/django_project/core/base_templates/includes/base-auth-nav-left.html
+++ b/django_project/core/base_templates/includes/base-auth-nav-left.html
@@ -30,11 +30,11 @@
     <ul class="nav navbar-nav">
         <li>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Training & Certification <b class="caret"></b>
+                Training &amp; Certification <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
                 <li>
-                    <a href="{% url 'register-training-centre' %}">
+                    <a href="{% url 'register-training-center' %}">
                         Register Training Centre</a>
                 </li>
 
