--- a/django_project/lesson/templates/section/includes/row-worksheet.html
+++ b/django_project/lesson/templates/section/includes/row-worksheet.html
@@ -4,7 +4,7 @@
     <div class="col-lg-9" id="{{ worksheet.module }}">
         <input class="worksheet-checkbox {{ worksheet.section.slug }}-checkbox" worksheet-pk="{{ worksheet.pk }}" worksheet-number="{{ forloop.parentloop.counter }}.{{ forloop.counter }}" type="checkbox" hidden>
         <h4>
-            <a href="{% url "worksheet-detail" project_slug=worksheet.section.project.slug section_slug=worksheet.section.slug pk=worksheet.pk %}">
+            <a href="{% url "worksheet-detail" project_slug=worksheet.section.project.slug section_slug=worksheet.section.slug pk=worksheet.pk %}?q={{ forloop.parentloop.counter }}.{{ forloop.counter }}">
                 {{ forloop.parentloop.counter }}.{{ forloop.counter }}. {{ worksheet.module }}
             </a>
             {{ worksheet|is_translation_up_to_date }}
